added footer include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,4 @@ layout: simple
 	
 </div> <!--left container-->
 
-
-
-<div id="footer">
-	<!--#config timefmt="%B %d, %Y" -->
-	Last modified: <!--#echo var="LAST_MODIFIED"-->
-</div>
+{% include footer.html %}
