--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="masthead">
 	<div id="bannerphoto">
-		<img height=100% src="http://people.eecs.ku.edu/~tlindsey/theodore.jpg">
+		<img height=100% src="/images/theodore.jpg">
 	</div>
 
 	<div id="bannertext">
