fixed build failure?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: simple
 ---
 
-{% if page.section %}{% include subheaders/{{ page.section }}_subheader.html %}{% endif %}
+# {% if page.section %}{% include subheaders/{{ page.section }}_subheader.html %}{% endif %}
 
 
 {% include header.html %}
