--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <div id="right_container">
-	<a href="http://people.eecs.ku.edu/~tlindsey/">home</a><br />
+	<a href="{{site.baseurl}}">home</a><br />
+    <a href="{{site.baseurl}}/academics.html">Academics</a><br />
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">resume</a><br>
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">curriculum vitae</a><br>
-  	<a href="http://people.eecs.ku.edu/~tlindsey/teaching.html">teaching</a><br />
+  	<a href="{{site.baseurl}}/teaching.html">teaching</a><br />
 	<a href="http://www.linkedin.com/in/theodorelindsey" target="_blank">linkedin</a>
 </div> <!--right container-->
