--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div id="right_container">
-	<a href="{{site.baseurl}}">home</a><br />
+	<a href="{{site.baseurl}}/index.html">home</a><br />
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">resume</a><br>
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">curriculum vitae</a><br>
