--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
 <div id="right_container">
 	<a href="{{site.baseurl}}/index.html">Home</a><br />
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
-	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">resume</a><br>
-	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">curriculum vitae</a><br>
-  	<a href="{{site.baseurl}}/teaching.html">teaching</a><br />
-	<a href="http://www.linkedin.com/in/theodorelindsey" target="_blank">linkedin</a>
+  	<a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
+	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
+	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a><br />
+    <hr /><br />
+	<a href="http://www.linkedin.com/in/theodorelindsey" target="_blank">LinkedIn</a><br />
+    <a href="http://git.theodorelindsey.com">Github</a><br />
 </div> <!--right container-->
