--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
   	<a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a><br />
-    <hr /><br />
+    <br /><hr /><br />
 	<a href="http://www.linkedin.com/in/theodorelindsey" target="_blank">LinkedIn</a><br />
-    <a href="http://git.theodorelindsey.com">Github</a><br />
+    <a href="https://github.com/RagingRoosevelt">Github</a><br />
 </div> <!--right container-->
