--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,9 +5,9 @@
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
 	<a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a><br />
     <br /><hr /><br />
-	<a href="http://www.linkedin.com/in/{{site.username_linkedin}}" target="_blank">LinkedIn</a><br />
-    <a href="https://github.com/{{site.username_github}}">Github</a><br />
-    <a href="https://plus.google.com/{{site.username_gplus}}">G+</a><br />
-    <a href="https://twitter.com/{{site.username_twitter}}"><img src="https://www.facebook.com/favicon.ico" />/{{site.username_twitter}}</a><br />
-    <a href="https://facebook.com/{{site.username_facebook}}">Facebook</a><br />
+	<a href="http://www.linkedin.com/in/{{site.username_linkedin}}" target="_blank"><img src="https://www.linkedin.com/favicon.ico" width="16px" />/{{site.username_linkedin}}</a><br />
+    <a href="https://github.com/{{site.username_github}}"><img src="https://github.com/favicon.ico" width="16px" />/{{site.username_github}}</a><br />
+    <a href="https://plus.google.com/{{site.username_gplus}}"><img src="https://ssl.gstatic.com/s2/oz/images/faviconr3.ico" width="16px" />/{{site.username_gplus}}</a><br />
+    <a href="https://twitter.com/{{site.username_twitter}}"><img src="https://twitter.com/favicon.ico" width="16px" />/{{site.username_twitter}}</a><br />
+    <a href="https://facebook.com/{{site.username_facebook}}"><img src="https://www.facebook.com/favicon.ico" width="16px" />/{{site.username_facebook}}</a><br />
 </div> <!--right container-->
