--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,4 +10,5 @@
     <a href="https://plus.google.com/{{site.username_gplus}}"><img src="https://ssl.gstatic.com/s2/oz/images/faviconr3.ico" width="16px" />/{{site.username_gplus}}</a><br />
     <a href="https://twitter.com/{{site.username_twitter}}"><img src="https://twitter.com/favicon.ico" width="16px" />/{{site.username_twitter}}</a><br />
     <a href="https://facebook.com/{{site.username_facebook}}"><img src="https://www.facebook.com/favicon.ico" width="16px" />/{{site.username_facebook}}</a><br />
+    <a href="https://steamcommunity.com/id/{{site.username_steam}}"><img src="http://steamcommunity.com/favicon.ico" width="16px" />/{{site.username_steam}}</a><br />
 </div> <!--right container-->
