--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div id="footer">
 	<!--#config timefmt="%B %d, %Y" -->
-	Last modified: <!--#echo var="LAST_MODIFIED"-->
+	Last modified: <!--#echo var="LAST_MODIFIED"--> 2015-08-21
 </div>
