--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,5 @@ layout: simple
 
 <div id="footer">
 	<!--#config timefmt="%B %d, %Y" -->
-	Last modified: {{ page.last_modified_at | date: '%y/%m/%d' }}
+	Last modified: {{ page.last_modified_at }}
 </div>
