--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<div id="right_container">
+<div id="nav">
 	<a href="{{site.baseurl}}/index.html">Home</a><br />
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
   	<a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
