--- a/css/grad.css
+++ b/css/grad.css
@@ -69,7 +69,7 @@ body {
 	min-height: 480px;
 }
 
-#right_container {
+#nav {
 	width:192px;
         /*width:15%;*/
 	float:right;
@@ -80,7 +80,7 @@ body {
         min-height:100%/*470px*/;
 }
 
-#right_container {
+#recent_posts {
 	width:192px;
         /*width:15%;*/
 	float:right;
