--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,11 @@ layout: simple
 ---
 
 {% include header.html %}
-{% include nav.html %}
-{% include recentposts.html %}
+
+<div id="sidebar">
+    {% include nav.html %}
+    {% include recentposts.html %}
+</div>
 
 <div id="left_container">
 	
