--- a/css/grad.css
+++ b/css/grad.css
@@ -69,7 +69,7 @@ body {
 	min-height: 480px;
 }
 
-#nav {
+#sidebar {
 	width:192px;
         /*width:15%;*/
 	float:right;
@@ -80,10 +80,23 @@ body {
         min-height:100%/*470px*/;
 }
 
-#recent_posts {
-	width:192px;
+#nav {
+	width:100%;
         /*width:15%;*/
-	float:right;
+    position: absolute;
+	/*float:right;*/
+	padding:20px 5px 10px 40px;
+        display:inline-block;
+        background-color:#BBBBBB;
+        /*color:#ee3300; */
+        min-height:100%/*470px*/;
+}
+
+#recent_posts {
+	width:100%;
+        /*width:15%;*/
+    position: absolute;
+	/*float:right;*/
 	padding:20px 5px 10px 40px;
         display:inline-block;
         background-color:#BBBBBB;
