fixed layout css

--- a/css/grad.css
+++ b/css/grad.css
@@ -89,7 +89,7 @@ body {
     display:inline-block;
     background-color:#BBBBBB;
     /*color:#ee3300; */
-    min-height:100%/*470px*/;
+    /*min-height:100%*//*470px*/;
 }
 
 #recent_posts {
@@ -101,7 +101,7 @@ body {
     display:inline-block;
     background-color:#BBBBBB;
     /*color:#ee3300; */
-    min-height:100%/*470px*/;
+    /*min-height:100%*//*470px*/;
 }
 
 
