--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 	</div>
 
 	<div id="bannertext">
-		<a href="." style="font-size:200%;text-decoration:none">Theodore S. Lindsey</a><br />
+		<a href="{{site.url}}" style="font-size:200%;text-decoration:none">Theodore S. Lindsey</a><br />
 		University of Kansas - <a href="http://eecs.ku.edu/">Computer Science</a><br /><br />
 		email: <a href="mailto:tlindsey@ku.edu">tlindsey@ku.edu</a><br />
 		office: Eaton 3025<br />
