--- a/css/grad.css
+++ b/css/grad.css
@@ -82,26 +82,19 @@ body {
 
 #nav {
     /*width:192px;*/
-        /*width:15%;*/
+    /*width:15%;*/
     position: absolute;
     /*float:right;*/
-    padding:20px 5px 10px 40px;
-    display:block;
+    /*padding:20px 5px 10px 40px;
+    display:block;*/
     background-color:#BBBBBB;
     /*color:#ee3300; */
     /*min-height:100%*//*470px*/;
 }
 
 #recent_posts {
-    width:192px;
-        /*width:15%;*/
     position: absolute;
-    /*float:right;*/
-    padding:20px 5px 10px 40px;
-    display:block;
     background-color:#BBBBBB;
-    /*color:#ee3300; */
-    /*min-height:100%*//*470px*/;
     bottom: 0;
 }
 
