--- a/css/grad.css
+++ b/css/grad.css
@@ -84,6 +84,7 @@ body {
     /*width:192px;*/
     /*width:15%;*/
     position: absolute;
+    float:left;
     /*float:right;*/
     /*padding:20px 5px 10px 40px;*/
     display:block;
@@ -94,6 +95,7 @@ body {
 
 #recent_posts {
     position: absolute;
+    float:left;
     background-color:#BBBBBB;
     display:block;
 }
