--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div id="masthead">
+<div id="header">
     <div id="bannerphoto">
         <img height=100% src="/images/theodore.jpg">
     </div>
