--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: simple
     {% include recentposts.html %}
 </div>
 
-<div id="left_container">
+<div id="content">
     
     {{ content }}
     
