--- a/css/grad.css
+++ b/css/grad.css
@@ -96,6 +96,11 @@ body {
 #recent_posts {
     background-color:#BBBBBB;
 }
+#recent_posts ul{
+    list-style: none;
+    padding-left:0;
+    
+}
 
 
 #footer { 
