--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <h1>{{page.title}}</h1><br />
-<h3>{{page.date}}</h3><br />
+<h3>{{page.date | date: "%B %-d, %Y"}}</h3><br />
 
 {{ content }}
