renamed file, nav update, blog page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <div id="nav">
     <a href="{{site.baseurl}}/index.html">Home</a><br />
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
-      <a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
+    <a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
+    <a href="{{site.baseurl}}/blog.html">Blog</a><br />
     <a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
     <a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a><br />
     <br /><hr /><br />
@@ -11,4 +12,5 @@
     <a href="https://twitter.com/{{site.username_twitter}}"><img src="https://twitter.com/favicon.ico" width="16px" />/{{site.username_twitter}}</a><br />
     <a href="https://facebook.com/{{site.username_facebook}}"><img src="https://www.facebook.com/favicon.ico" width="16px" />/{{site.username_facebook}}</a><br />
     <a href="https://steamcommunity.com/id/{{site.username_steam}}"><img src="http://steamcommunity.com/favicon.ico" width="16px" />/{{site.username_steam}}</a><br />
+    <br /><hr /><br />
 </div> <!--right container-->
