Added blog posts.  Need to add pagination.

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <h2>{{page.title}}</h2><br />
-<h4>{{page.date | date: "%B %-d, %Y"}}</h4><br />
+<b>{{page.date | date: "%B %-d, %Y"}}</b><br /><br />
 
 {{ content }}
