--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <a href="{{site.baseurl}}/index.html">Home</a><br />
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
     <a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
-    <a href="{{site.baseurl}}/blog.html">Blog</a><br />
+    <a href="{{site.baseurl}}/blog/">Blog</a><br />
     <a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
     <a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a><br />
     <br /><hr /><br />
