--- a/_includes/recentposts.html
+++ b/_includes/recentposts.html
@@ -1,5 +1,6 @@
 <div id="recent_posts">
-    <ul>
+    Recent posts:
+    <ul display="">
         {% for post in site.posts limit: 5 %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
