--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,9 @@
     </div>
 
     <div id="bannertext">
-        <a href="{{site.url}}" style="font-size:200%;text-decoration:none">Theodore S. Lindsey</a><br />
-        University of Kansas - <a href="http://eecs.ku.edu/">Computer Science</a><br /><br />
+        <a href="{{site.url}}" style="font-size:200%;text-decoration:none">Theodore S. Lindsey</a> - University of Kansas: <a href="http://eecs.ku.edu/">Computer Science</a><br />
         email: <a href="mailto:tlindsey@ku.edu">tlindsey@ku.edu</a><br />
-        office: Eaton 3025<br />
+        office: Eaton 2029<br />
         phone: (503) 898-0184
     </div>
 </div>  <!--masthead-->
