--- a/css/grad.css
+++ b/css/grad.css
@@ -23,7 +23,7 @@ body {
     margin-left:auto;
     margin-right:auto;
     width:850px; /* body.width > {menu + contents}.width + 4*padding */
-    background-color:#ffffff;
+    background-color:#CCCCCC;
     color:#111111;
     font:15px arial,sans-serif;
     /*font-family:Arial,Helvetica,sans-serif;*/ 
@@ -37,7 +37,7 @@ body {
 #header {
     width:850px;
     display:inline-block;
-    height:280px;
+    height:150px;
     /*padding:0px 10px 0px 0px; */
     background-color:#CCCCCC; 
     /*background-color:#000000; */
@@ -47,7 +47,7 @@ body {
 }
 
 #bannerphoto {
-    height:280px;
+    height:150px;
     float:left;
 }
 
