layout and nav updates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,18 @@
     </div>
 
     <div id="bannertext">
-        <a href="{{site.url}}" style="font-size:200%;text-decoration:none">Theodore S. Lindsey</a> - University of Kansas: <a href="http://eecs.ku.edu/">Computer Science</a><br />
-        email: <a href="mailto:tlindsey@ku.edu">tlindsey@ku.edu</a><br />
-        office: Eaton 2029<br />
-        phone: (503) 898-0184
+        <table>
+        <tr>
+            <td style="padding-right:114px;">
+                <a href="{{site.url}}" style="font-size:193%;text-decoration:none">Theodore S. Lindsey</a><br />
+                University of Kansas: <a href="http://eecs.ku.edu/">Computer Science</a><br />
+            </td>
+            <td>
+                email: <a href="mailto:tlindsey@ku.edu">tlindsey@ku.edu</a><br />
+                office: Eaton 2029<br />
+                phone: (503) 898-0184
+            </td>
+        </tr>
+        </table>
     </div>
 </div>  <!--masthead-->
