--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@ layout: simple
 
 <div id="sidebar">
     {% include nav.html %}
-    
+    <br /><hr /><br />
+    {% include links.html %}
+    <br /><hr /><br />    
     {% include recentposts.html %}
 </div>
 
