--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
     <div id="bannertext">
         <table>
         <tr>
-            <td style="padding-right:114px;">
-                <a href="{{site.url}}" style="font-size:193%;text-decoration:none">Theodore S. Lindsey</a><br />
+            <td style="padding-right:103px;">
+                <a href="/" style="font-size:193%;text-decoration:none">Theodore S. Lindsey</a><br />
                 University of Kansas: <a href="http://eecs.ku.edu/">Computer Science</a><br />
             </td>
             <td>
