--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div id="nav">
-    <a href="{{site.baseurl}}/index.html">Home</a><br />
+    <a href="/">Home</a><br />
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
     <a href="{{site.baseurl}}/teaching.html">Teaching</a><br />
     <a href="{{site.baseurl}}/blog/">Blog</a><br />
