--- a/css/desktop.css
+++ b/css/desktop.css
@@ -15,8 +15,7 @@
 | footer                |
 +-----------------------+
 
-css adapted from original design by James Graham
-https://math.dartmouth.edu/news-resources/computing/resources_common_webpages.phtml */
+*/
 
 body {
     margin-top:0px;
@@ -70,8 +69,16 @@ body {
     background-color:#EEEEEE;/*rgba(93,93,93,0.3);*/
     min-height: 600px;
 }
-#content img{
+
+img.full{
     width: 98%;
+    padding:1px;
+    border:1px solid #000000;
+}
+img.half{
+    width: 49%;
+    padding:1px;
+    border:1px solid #000000;
 }
 
 #sidebar {
@@ -133,10 +140,6 @@ a {
 a:hover {
     color:#000088;
     text-decoration:none;
-}
-
-ul { 
-    list-style-type: none;  
 }
 
 label { 
