updated css, fixed incorrectly listed degree

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -155,3 +155,11 @@ fieldset {
     color:#ff0000;
     font-weight:bolder;
 }
+
+#hfill {
+    display: flex; 
+    justify-content: space-between; 
+    list-style-type: none; 
+    padding-left:0; 
+    margin: 2px;
+}
