Changed asset directory, added resume and cv

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header">
     <div id="bannerphoto">
-        <img height=100% src="/images/theodore.jpg">
+        <img height=100% src="/assets/theodore.jpg">
     </div>
 
     <div id="bannertext">
