--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,6 @@
     <a href="{{site.baseurl}}/academics.html">Academics</a><br />
     <a href="{{site.baseurl}}/teaching/">Teaching</a><br />
     <a href="{{site.baseurl}}/blog/">Blog</a><br />
-    <a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
-    <a href="http://people.eecs.ku.edu/~tlindsey/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a>
+    <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a><br />
+    <a href="/assets/Theodore_Lindsey_CV.pdf" target="_blank">Curriculum Vitae</a>
 </div> <!--right container-->
