--- a/css/desktop.css
+++ b/css/desktop.css
@@ -27,7 +27,7 @@ body {
     font:15px arial,sans-serif;
     /*font-family:Arial,Helvetica,sans-serif;*/ 
     border:solid 0px pink;
-    background-image: url("/images/soda_small.jpg");
+    background-image: url("/assets/soda_small.jpg");
     background-repeat: no-repeat; background-position: top left; background-attachment: fixed; background-size: 100%;
 }
 
