updated resume and improved site layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
-<div id="footer">
-	<!--#config timefmt="%B %d, %Y" -->
-	Last modified: <!--#echo var="LAST_MODIFIED"--> 2015-08-21
+
+<div id="footer_padding">
+    <div id="footer">
+        <!--#config timefmt="%B %d, %Y" -->
+        Last modified: <!--#echo var="LAST_MODIFIED"--> {{ page.date }}
+    </div>
 </div>
