--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,12 @@ layout: simple
 
 {% include header.html %}
 
+<div id="navbar">
+{% include nav.html %}
+</div>
 
 <div id="sidebar">
-    {% include nav.html %}
-    <br /><hr /><br />
-    {% include links.html %}
+{% include links.html %}
     <br /><hr /><br />    
     {% include recentposts.html %}
 </div>
