--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/blog/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <link rel="icon" type="image/png" href="/favicon.png">
+  
+  {% include google_analytics.html %}
 </head>
