--- a/css/desktop.css
+++ b/css/desktop.css
@@ -27,8 +27,12 @@ body {
     font:15px arial,sans-serif;
     /*font-family:Arial,Helvetica,sans-serif;*/ 
     border:solid 0px pink;
-    background-image: url("/assets/soda_small.jpg");
-    background-repeat: no-repeat; background-position: top left; background-attachment: fixed; background-size: 100%;
+    
+    background: url("/assets/soda_small.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 #wrapper {
