added favicons for links, updated profile links

--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,8 +1,21 @@
+<!--<div id="links">
+    <a href="https://github.com/{{site.username_github}}"><img src="/assets/icons/github-24.png" width="24px" />/{{site.username_github}}</a><br />
+    <a href="http://www.linkedin.com/in/{{site.username_linkedin}}" target="_blank"><img src="/assets/icons/linkedin-24.png" width="24px" />/{{site.username_linkedin}}</a><br />
+    <a href="https://plus.google.com/{{site.username_gplus}}"><img src="/assets/icons/gplus-24.png" width="24px" />/{{site.username_gplus}}</a><br />
+    <a href="https://twitter.com/{{site.username_twitter}}"><img src="/assets/icons/twitter-24.png" width="24px" />/{{site.username_twitter}}</a><br />
+    <a href="https://facebook.com/{{site.username_facebook}}"><img src="/assets/icons/facebook-24.png" width="24px" />/{{site.username_facebook}}</a><br />
+    <a href="https://steamcommunity.com/id/{{site.username_steam}}"><img src="/assets/icons/steam-24.png" width="24px" />/{{site.username_steam}}</a>
+</div>-->
+
 <div id="links">
-    <a href="https://github.com/{{site.username_github}}"><img src="https://github.com/favicon.ico" width="16px" />/{{site.username_github}}</a><br />
-    <a href="http://www.linkedin.com/in/{{site.username_linkedin}}" target="_blank"><img src="https://www.linkedin.com/favicon.ico" width="16px" />/{{site.username_linkedin}}</a><br />
-    <a href="https://plus.google.com/{{site.username_gplus}}"><img src="https://ssl.gstatic.com/s2/oz/images/faviconr3.ico" width="16px" />/{{site.username_gplus}}</a><br />
-    <a href="https://twitter.com/{{site.username_twitter}}"><img src="https://twitter.com/favicon.ico" width="16px" />/{{site.username_twitter}}</a><br />
-    <a href="https://facebook.com/{{site.username_facebook}}"><img src="https://www.facebook.com/favicon.ico" width="16px" />/{{site.username_facebook}}</a><br />
-    <a href="https://steamcommunity.com/id/{{site.username_steam}}"><img src="http://steamcommunity.com/favicon.ico" width="16px" />/{{site.username_steam}}</a>
+<table style="width: 100%;">
+<tr>
+    <td><a href="https://github.com/{{site.username_github}}" target="_blank"><img src="/assets/icons/github-24.png" width="24px" /></a></td>
+    <td><a href="http://www.linkedin.com/in/{{site.username_linkedin}}" target="_blank"><img src="/assets/icons/linkedin-24.png" width="24px" /></a></td>
+    <td><a href="https://plus.google.com/{{site.username_gplus}}" target="_blank"><img src="/assets/icons/gplus-24.png" width="24px" /></a></td>
+    <td><a href="https://twitter.com/{{site.username_twitter}}" target="_blank"><img src="/assets/icons/twitter-24.png" width="24px" /></a></td>
+    <td><a href="https://facebook.com/{{site.username_facebook}}" target="_blank"><img src="/assets/icons/facebook-24.png" width="24px" /></a></td>
+    <td><a href="https://steamcommunity.com/id/{{site.username_steam}}" target="_blank"><img src="/assets/icons/steam-24.png" width="24px" /></a></td>
+</tr>
+</table>
 </div>
