--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,23 +1,29 @@
 <div id="nav">
     <table>
-        <tr>
+       <tr>
         <td {% if page.section == "Home" %}id="active_nav"{% endif %}>
-            <a href="/">Home</a></td>
+            <a href="/">Home</a>
+        </td>
             
         <td {% if page.section == "Academics" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/academics.html">Academics</a></td>
+            <a href="{{site.baseurl}}/academics.html">Academics</a>
+        </td>
             
         <td {% if page.section == "Teaching" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/teaching/">Teaching</a></td>
+            <a href="{{site.baseurl}}/teaching/">Teaching</a>
+        </td>
             
         <td {% if page.section == "Blog" %}id="active_nav"{% endif %}>
-            <a href="{{site.baseurl}}/blog/">Blog</a></td>
+            <a href="{{site.baseurl}}/blog/">Blog</a>
+        </td>
             
         <td>
-            <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a></td>
+            <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a>
+        </td>
             
         <td>
-            <a href="/assets/Theodore_Lindsey_CV.pdf" target="_blank">CV</a></td>
+            <a href="/assets/Theodore_Lindsey_CV.pdf" target="_blank">CV</a>
+        </td>
             
         </tr>
     </table>
