--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,21 +17,28 @@
 
 */
 
+a {
+    color: #888888;
+}
+
 .all {
     border-style: solid;
     border-width: 1px;
 }
 
 .centred_wrapper {
-    margin-left: auto;
+    /*margin-left: auto;*/
+    /*padding: 0px 0px 0px 200px;*/
+    margin-left: 150px;
     margin-right: auto;
     width: 70%;
-    min-width: 700px;
+    min-width: 400px;
     max-width: 1000px;
 }
 
 .header_wrapper {
     background-color: #D8D8D8;
+    height: 75px;
 }
 
 .main_wrapper {
@@ -45,7 +52,18 @@
 .sidebar_wrapper {
     background-color: #424242;
     float:left;
-    height: 100%
+    height: 98%;
+    margin-bottom: auto;
+    
+    width:150px;
+    position: fixed;
+}
+
+.sidebar_wrapper  ul {
+    list-style-type: none;
+    list-style-position: outside;
+    margin: 0;
+    padding: 0;
 }
 
 .clear {
