--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,6 +16,10 @@
         <td {% if page.section == "Blog" %}id="active_nav"{% endif %}>
             <a href="{{site.baseurl}}/blog/">Blog</a>
         </td>
+        
+        <td {% if page.section == "Contact" %}id="active_nav"{% endif %}>
+            <a href="{{site.baseurl}}/contact.html">Contact</a>
+        </td>
             
         <td>
             <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank">Resume</a>
